--- a/dmuBlogger/dmuBlogger/dmuBlogger.csproj
+++ b/dmuBlogger/dmuBlogger/dmuBlogger.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="HTML\Home.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
