--- a/dmuBlogger/dmuBlogger/dmuBlogger.csproj
+++ b/dmuBlogger/dmuBlogger/dmuBlogger.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CSS\Home.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
