--- a/dmuBlogger/dmuBlogger/Web.config
+++ b/dmuBlogger/dmuBlogger/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GameContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GameContext-20200317105043; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GameContext-20200317105043.mdf" providerName="System.Data.SqlClient" />
+    <add name="GameContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GameContext-20200317105043; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GameContext-20200317105043.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="CommentContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=CommentContext-20200317111933; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CommentContext-20200317111933.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="DeveloperContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DeveloperContext-20200317113337; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DeveloperContext-20200317113337.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
